--- a/Masters-thesis-Robin-Verbeelen/personal_data.tex
+++ b/Masters-thesis-Robin-Verbeelen/personal_data.tex
@@ -29,7 +29,7 @@
 % \newacronym{UI}{UI}{User Interface}
 % \newacronym{GUI}{GUI}{Graphical User Interface}
 % \newacronym{VPN}{VPN}{Virtual Private Network}
-\newacronym{API}{API}{Application Programming Interface}
+\newacronym{api}{API}{Application Programming Interface}
 \newacronym{wasi}{WASI}{WebAssembly System Interface}
 \newacronym{abi}{ABI}{Application Binary Interface}
 \newacronym{jit}{JIT}{Just-In-Time}
@@ -43,3 +43,5 @@
 \newacronym{iot}{IoT}{Internet of Things}
 \newacronym{wasm}{Wasm}{WebAssembly}
 \newacronym{i2c}{I\textsuperscript{2}C}{Inter-Integrated Circuit}
+\newacronym{ffi}{FFI}{Foreign Function Interface}
+
